added more styles

--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-4 text-center text-block" data-aos="fade-up" data-aos-delay="400">
-                <h2 class="support_head" style="color:#f2ba16">About Us</h2>
+                <h2 class="support_head" style="color:#f2ba16">About Selah Series</h2>
             </div>
         </div>
     </div>
@@ -51,15 +51,15 @@
     </div>
 </div>
 
-<div style="background-color:#0071bd; padding-top:41px; padding-bottom: 83px; margin-top:80px">
+<div class="authors" style="background-color:#0071bd; padding-top:41px; margin-top:80px">
     <h3 style="background-color:white"></h3>
     <h3 style="color:white; text-align:center; padding-bottom:33px">Meet the Authors</h3>
     <div>
-        <div class="container" style="width:80%; margin-bottom:83px;background: url('/NewFolder2/new/abstract-antique-backdrop-background-129731.jpg'); background-position:center; background-size:cover;">
+        <div class="container bio" style="background: url('/NewFolder2/new/abstract-antique-backdrop-background-129731.jpg'); background-position:center; background-size:cover;">
             <div>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card" style="border-radius:0px; margin-right: 15px">
+                        <div class="card" style="border-radius:0px">
                             <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="h5 card-text">‘Lekan: Simply a Blend of Grace, Vision and Courage!</p>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8">
-                        <div id="myCarousel" class="carousel slide" style="margin-left: 15px">
+                        <div id="myCarousel" class="carousel slide">
                             <p style="text-align:justify; color: black; line-height: 1.7">
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>‘Lekan Agunbiade</b> is a Nigerian, from the ancient city of Ilesha. I was born in Lagos and grew
                                 up in Ilesha. I had my early education at The Apostolic Church Primary School, Oke – Iro and
@@ -122,11 +122,11 @@
         </div>
     </div>
     <div>
-        <div class="container" style="width:80%;background: url('/NewFolder2/new/abstract-antique-backdrop-background-129731.jpg');  background-position:center; background-size:cover;">
+        <div class="container bio" style="background: url('/NewFolder2/new/abstract-antique-backdrop-background-129731.jpg');  background-position:center; background-size:cover;">
             <div>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card" style="border-radius:0px; margin-right: 15px">
+                        <div class="card" style="border-radius:0px">
                             <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="h5 card-text">Titilayo: a World of Vision Embedded in Tranquillity</p>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8">
-                        <div id="myCarousel" class="carousel slide" style="margin-left: 15px">
+                        <div id="myCarousel" class="carousel slide">
                             <p style="text-align:justify; color: black; line-height: 1.7">
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My name is Titilayo LEKAN-AGUNBIADE. I was born into a middle level monogamous
                                 family of six in Nigeria. I had my primary school education in St. Mary Catholic Primary
@@ -194,11 +194,11 @@
     <div style="margin-left:auto; margin-right:auto">
         <img class="eureka" src="~/NewFolder2/new/two-gold-rings-near-white-and-pink-huyflowers-1405678 (1).jpg" />
     </div>
-    <div class="container eurek" style="width:80%">
+    <div class="container eurek bio">
         <div>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="card" style="border-radius:0px; margin-right: 15px">
+                    <div class="card" style="border-radius:0px">
                         <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="h5 card-text">
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <div id="myCarousel" class="carousel slide" style="margin-left: 15px">
+                    <div id="myCarousel" class="carousel slide">
                         <p style="text-align:justify; color: black; line-height: 1.7">
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I met Titilayo at the Chapel of Grace when she was in OAUTHC for her year – long internship
                             program at the Haematology and Blood Transfusion department of the hospital laboratory. At
@@ -405,12 +405,18 @@
     }
     .eurek {
         position: relative;
-        margin-top: -58px;
+        margin-top: -97px;
         background: url("/NewFolder2/new/abstract-antique-backdrop-background-129731.jpg");
         background-position: center;
         background-size: contain;
         margin-bottom: 50px;
     }
+    .bio {
+        width: 80%;
+        margin-bottom: 83px;
+    }
+    .authors {
+        padding-bottom: 83px;
     }
   
 </style>
