--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -51,16 +51,6 @@
 
         </div>
 
-
-        <div class="carousel-item" style="background-image: url('/NewFolder2/new/green-tree-on-grass-field-during-daytime-53435.jpg')">
-            <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Selah...A place of Growth</h3>
-
-
-                <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
-            </div>
-
-        </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('/NewFolder2/new/hian-oliveira-7-gtkXm2b5U-unsplash (1).jpg')">
             <div class="carousel-caption text-block d-md-block">
@@ -71,10 +61,21 @@
             </div>
 
         </div>
+
+        <div class="carousel-item" style="background-image: url('/NewFolder2/new/agriculture-asia-cat-china-235648.jpg')">
+            <div class="carousel-caption text-block d-md-block">
+                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">With us, you come up and grow your potentials </h3>
+
+
+                <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+            </div>
+
+        </div>
+
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('/NewFolder2/new/emilio-garcia-AWdCgDDedH0-unsplash.jpg')">
             <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Get updates on sports and politics</h3>
+                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Get incising updates on football and politics</h3>
 
                 <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
             </div>
@@ -105,12 +106,12 @@
             </div>
 
         </div>
-        //this cards self , cant the entire card be the link do we really need the readmore
+ 
         <div class=" col-sm-12 col-md-6 col-lg-3">
             <div class="card2">
                 <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Need latest news on sports?</h4>
+                    <h4>Need latest news on football?</h4>
                     <p>@Html.ActionLink("See here >>>", "Category", "Blog")</p>
                 </div>
             </div>
@@ -178,7 +179,7 @@
 
                         <div class="section_panel d-flex flex-row align-items-center justify-content-start">
                             <div class="section_title">Don't Miss</div>
-                            @*<div class="section_tags ml-auto">
+                            <div class="section_tags ml-auto">
                                 <ul>
                                     <li class="active"><a href="category.html">all</a></li>
                                     <li>@Html.ActionLink("Relationship & Marriage", "Category", "Blog")</li>
@@ -186,8 +187,8 @@
                                     <li>@Html.ActionLink("Sports", "Category", "Blog")</li>
                                     <li>@Html.ActionLink("career", "Category", "Blog")</li>
                                 </ul>
-                            </div>*@
-                            @*<div class="section_panel_more">
+                            </div>
+                            <div class="section_panel_more">
                                     <ul>
                                         <li>
                                             more
@@ -201,7 +202,7 @@
                                             </ul>
                                         </li>
                                     </ul>
-                                </div>*@
+                                </div>
                         </div>
 
                         <div class="section_content">
@@ -838,7 +839,7 @@
         color: white;
         padding: 40px;
         opacity: 0.8;
-        font-size: 40px
+  
     }
 
     .containe {
@@ -856,7 +857,7 @@
         overflow: no-content;
     }
     div.carousel-caption{
-        width: 750px;
+     
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
