--- a/SelahSeries/Views/Home/Contact.cshtml
+++ b/SelahSeries/Views/Home/Contact.cshtml
@@ -12,6 +12,7 @@
     <script src="plugins/parallax-js-master/parallax.min.js"></script>
 }
 
+
     <div class="home">
         <div class="home_background parallax-window site-blocks-cover overlay" data-parallax="scroll" style="background-image:url(/NewFolder2/new/priscilla-du-preez-glDterhfzKw-unsplash.jpg)" data-speed="0.8"></div>
         
@@ -22,12 +23,16 @@
                         <!-- Post Comment -->
                         <div class="post_comment">
                             <div class="contact_form_container">
-                                <form action="#">
-                                    <input type="text" class="contact_input contact_input_name" placeholder="Your Name" required="required">
-                                    <input type="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
-                                    <textarea class="contact_text" placeholder="Your Message" required="required"></textarea>
+                                @using (Html.BeginForm())
+                                {
+                                    @Html.AntiForgeryToken()
+                                    <input type="text" name="name" class="contact_input contact_input_name" placeholder="Your FullName" required="required">
+                                    <input type="email" name="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
+                                    <input type="text" name="Subject" class="contact_input contact_input_name" placeholder="Mesage Subject" required="required">
+                                    <textarea class="contact_text" name="message" placeholder="Your Message" required="required"></textarea>
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <button type="submit" class="contact_button">Send Message</button>
-                                </form>
+                                }
                             </div>
                         </div>
                     </div>
