--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                                       </a>
                                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                           <a class="dropdown-item" href="~/Support/Index">Our Support Links</a>
-                                          <a class="dropdown-item" href="~/Support/Message_Form">Send Message</a>
+                                          <a class="dropdown-item" href="~/Support/Send_Message">Send Message</a>
                                       </div>
                                   </li>
                                   <li class="nav-item">
@@ -129,7 +129,7 @@
                                 <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left text-center">
                                     <h4 class="mb-4 font-weight-bold text-uppercase">quick links</h4>
                                     <ul class="list-group">
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Message_Form">Support/Counselling</a></li>
+                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Send_Message">Support/Counselling</a></li>
                                         @*<li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Index">Support Links</a></li>*@
                                         <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/About">About us</a></li>
                                         <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/Contact">Contact us</a></li>
