added more styles

--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -43,7 +43,8 @@
         <div class="carousel-item active" style="background-image: url('/NewFolder2/new/brooke-cagle-kvKSL7B6eTo-unsplash.jpg')">
 
             <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Welcome to Selah Series</h3>
+                <h3 class="mb-4" style="color: white ; font-family: 'Work Sans', sans-serif">Welcome to Selah Series</h3>
+                <h2 class="mb-4" style="color: #f2ba16 ; font-size:18px; font-family: 'Work Sans', sans-serif">Take a break and ponder on your path to fulfilment</h2>
                 <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
 
             </div>
