--- a/SelahSeries/Views/Support/Send_Message.cshtml
+++ b/SelahSeries/Views/Support/Send_Message.cshtml
@@ -59,7 +59,18 @@
                     <div class="row row-space">
                         <div class="col-2">
                             <div class="input-group">
-                                <input class="input--style-2" type="number" placeholder="Age" name="age" required="required">
+                                <div class="rs-select2 js-select-simple select--no-search">
+                                    <select name="age" required="required">
+                                        <option disabled="disabled" selected="selected">Age</option>
+                                        <option>16-20</option>
+                                        <option>21-25</option>
+                                        <option>26-30</option>
+                                        <option>31-35</option>
+                                        <option>35-46</option>
+                                        <option>46 & above</option>
+                                    </select>
+                                    <div class="select-dropdown"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-2">
