--- a/SelahSeries/Views/BlogMgt/Index.cshtml
+++ b/SelahSeries/Views/BlogMgt/Index.cshtml
@@ -88,7 +88,7 @@
                 <td>Unknown</td>
             }
             <td data-StripTag>
-                @Html.DisplayFor(modelItem => item.Content) <span>...</span>
+                @item.Content
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TitleImageUrl)
