--- a/SelahSeries/wwwroot/NewFolder2/styles/post.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/post.css
@@ -645,13 +645,15 @@ section
 {
 	color: rgba(0,0,0,0.8);
 }
-.post_title
-{
-	font-size: 2.0em;
-    letter-spacing:0.05em;
-	color: #FFFFFF;
-	font-weight: 600;
-	margin-top: 19px;
+.post_title {
+    background-color: rgba(0,0,0,0.5);
+    padding: 5px;
+    border-radius: 14px;
+    font-size: 2.0em;
+    letter-spacing: 0.05em;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-top: 19px;
 }
 .custom_nav_container
 {
