post section good

--- a/SelahSeries/Views/Blog/post.cshtml
+++ b/SelahSeries/Views/Blog/post.cshtml
@@ -168,9 +168,9 @@
                                     <div class="col-xl-9">
                                         <div class="post_comment_form_container">
                                             <form method="post" asp-controller="Blog" asp-action="PostComment">
-                                                <input type="hidden" value="@Model.Post.PostId" asp-for="Post.PostId" />
-                                                <input type="text" asp-for="Comment.Author" class="comment_input comment_input_name" placeholder="Your Name" required="required">
-                                                <input type="email" asp-for="Comment.Email" class="comment_input comment_input_email" placeholder="Your Email" required="required">
+                                                <input type="hidden" value="@Model.Post.PostId" asp-for="Comment.PostId" />
+                                                <input type="text" asp-for="Comment.Author" class="comment_input comment_input_name" placeholder="Your Name (optional)" />
+                                                <input type="email" asp-for="Comment.Email" class="comment_input comment_input_email" placeholder="Your Email (optional)" />
                                                 <textarea asp-for="Comment.Content" class="comment_text" placeholder="Your Comment" required="required"></textarea>
                                                 <button type="submit" class="comment_button">Post Comment</button>
                                             </form>
@@ -181,7 +181,7 @@
 
                             <!-- Comments -->
                             <div class="comments">
-                                <div class="comments_title">Comments <span>@{Model.CommentList.Count();}</span></div>
+                                <div class="comments_title">Comments <span>@Model.CommentList.Count()</span></div>
 
                                 <div class="row">
                                     <div class="col-xl-12">
@@ -270,260 +270,6 @@
                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                  width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                             <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 											</svg>
                                         </div>
