--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -1,32 +1,20 @@
-﻿@model IEnumerable<SelahSeries.Models.Post>
+﻿@model IEnumerable<SelahSeries.ViewModels.PostListViewModel>
 @{
-        ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page";
 
-        var latestArticle = Model.OrderByDescending(x => x.CreatedAt).Take(11);
+    var latestArticle = Model.OrderByDescending(x => x.CreatedAt).Take(11);
 
-       
-        //for (Model.OrderByAscending(x => x.created.take(11))
-        //{
-        //    foreach (var item in Model)
-        //    {
-        //        if (item.PostId == i)
-        //        {
-        //            latestArticles.Add(item);
-        //        }
-        //    }
-        //}
-
-    }
+}
 
 
 
-    @section AddToHead {
+@section AddToHead {
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/responsive.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/more_styles.css">
 }
 
-    @section AddToEnd {
+@section AddToEnd {
     <script src="~/NewFolder2/plugins/masonry/images_loaded.js"></script>
     <script src="~/NewFolder2/js/custom.js"></script>
 }
@@ -107,7 +95,7 @@
             </div>
 
         </div>
- 
+
         <div class=" col-sm-12 col-md-6 col-lg-3">
             <div class="card2">
                 <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
@@ -190,25 +178,25 @@
                                 </ul>
                             </div>
                             <div class="section_panel_more">
-                                    <ul>
-                                        <li>
-                                            more
-                                            <ul>
-                                                <li><a href="category.html">new look 2018</a></li>
-                                                <li><a href="category.html">street fashion</a></li>
-                                                <li><a href="category.html">business</a></li>
-                                                <li><a href="category.html">recipes</a></li>
-                                                <li><a href="category.html">sport</a></li>
-                                                <li><a href="category.html">celebrities</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li>
+                                        more
+                                        <ul>
+                                            <li><a href="category.html">new look 2018</a></li>
+                                            <li><a href="category.html">street fashion</a></li>
+                                            <li><a href="category.html">business</a></li>
+                                            <li><a href="category.html">recipes</a></li>
+                                            <li><a href="category.html">sport</a></li>
+                                            <li><a href="category.html">celebrities</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
 
                         <div class="section_content">
                             <div class="grid clearfix">
-                                
+
                                 @foreach (var item in latestArticle)
                                 {
                                     <!-- Small Card With Image -->
@@ -222,13 +210,13 @@
 
                                     <!-- Largest Card With Image -->
                                     @*<div class="card card_largest_with_image grid-item">
-                                        <img class="card-img-top" src="/NewFolder2/images/post_1.jpg" alt="https://unsplash.com/">
-                                        <div class="card-body">
-                                            <div class="card-title"><a href="~/blog/post">@/*Html.DisplayFor(modelItem => item.Title)*/</a></div>
-                                            <div class="card-text line-clamp">@/*Html.Raw("<div class=\"line-clamp\">" + item.Content + "</div>")*/</div>
-                                            <small class="post_meta"><a href="#">@/*Html.DisplayFor(modelItem => item.Author)*/</a><span>@/*Html.DisplayFor(modelItem => item.ModifiedAt)*/</span></small>
-                                        </div>
-                                    </div>*@
+                                            <img class="card-img-top" src="/NewFolder2/images/post_1.jpg" alt="https://unsplash.com/">
+                                            <div class="card-body">
+                                                <div class="card-title"><a href="~/blog/post">@/*Html.DisplayFor(modelItem => item.Title)*/</a></div>
+                                                <div class="card-text line-clamp">@/*Html.Raw("<div class=\"line-clamp\">" + item.Content + "</div>")*/</div>
+                                                <small class="post_meta"><a href="#">@/*Html.DisplayFor(modelItem => item.Author)*/</a><span>@/*Html.DisplayFor(modelItem => item.ModifiedAt)*/</span></small>
+                                            </div>
+                                        </div>*@
 
                                 }
 
@@ -286,16 +274,16 @@
 
                                 @foreach (var item in latestArticle)
                                 {
-                                <div class="card card_small_with_image grid-item">
-                                    <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
-                                        <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                    <div class="card card_small_with_image grid-item">
+                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                        <div class="card-body">
+                                            <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                            <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                        </div>
                                     </div>
-                                </div>
                                 }
 
-           
+
                                 <!-- Small Card With Image -->
                                 <div class="card card_small_with_image grid-item">
                                     <img class="card-img-top" src="/NewFolder2/images/post_10.jpg" alt="">
@@ -304,8 +292,8 @@
                                         <small class="post_meta"><a href="#">Html.DisplayFor(modelItem => item.Author)</a><span>Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
                                     </div>
                                 </div>
-                               
-           <!-- Small Card With Image -->
+
+                                <!-- Small Card With Image -->
                                 <div class="card card_small_with_image grid-item">
                                     <img class="card-img-top" src="/NewFolder2/images/post_15.jpg" alt="">
                                     <div class="card-body">
@@ -326,7 +314,7 @@
                                     </div>
                                 </div>
 
-                 
+
                                 <!-- Small Card With Background -->
                                 <div class="card card_default card_small_with_background grid-item">
                                     <div class="card_background" style="background-image:url(/NewFolder2/images/post_11.jpg)"></div>
@@ -335,7 +323,7 @@
                                         <small class="post_meta"><a href="#">Html.DisplayFor(modelItem => item.Author)</a><span>Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
                                     </div>
                                 </div>
-                               
+
 
 
 
@@ -376,6 +364,14 @@
 
 
 
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_vid">
@@ -387,6 +383,14 @@
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                              width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                         <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
+
+
+
+
+
+
+
+
 
 
 
@@ -816,12 +820,14 @@
 </div>
 
 <style>
-    .load_more a{
+    .load_more a {
         color: white;
     }
-    .load_more a:hover{
-        color: darkred;
-    }
+
+        .load_more a:hover {
+            color: darkred;
+        }
+
     .contain {
         position: relative;
         text-align: center;
@@ -840,7 +846,6 @@
         color: white;
         padding: 40px;
         opacity: 0.8;
-  
     }
 
     .containe {
@@ -851,14 +856,15 @@
     .books .carousel-inner {
         height: 320px;
     }
+
     .line-clamp {
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: no-content;
     }
-    div.carousel-caption{
-     
+
+    div.carousel-caption {
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
