--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -256,8 +256,8 @@
                             it, but most conversations were too one sided, too often. It can be so frustrating when you are
                             talking for hours and not hearing anything from the other person.
                         </p>
-                        <p style="text-align:justify; color: black; line-height: 1.7">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I knew through a few revelations that she was going through some tough times which I later
+                        <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
+                            I knew through a few revelations that she was going through some tough times which I later
                             realized; that she was walking out of a courtship of almost 3 years. Committing to another
                             suitor was not the best decision for her circumstances at the time; she had loads of things to
                             sort out with God regarding her marital life. For so long, I didn’t know this and she kept telling
